tests/baselines/reference/untypedModuleImport_withAugmentation.errors.txt
/a.ts(1,16): error TS2665: Invalid module name in augmentation. Module 'foo' resolves to an untyped module at '/node_modules/foo/index.js', which cannot be augmented.


==== /a.ts (1 errors) ====
    declare module "foo" {
                   ~~~~~
!!! error TS2665: Invalid module name in augmentation. Module 'foo' resolves to an untyped module at '/node_modules/foo/index.js', which cannot be augmented.
        export const x: number;
    }
    import { x } from "foo";
    x;
    
==== /node_modules/foo/index.js (0 errors) ====
    This file is not processed.
    